--- a/src/styles/pages/settingsPage.scss
+++ b/src/styles/pages/settingsPage.scss
@@ -19,7 +19,7 @@
 
             img {
                 max-width: 50vw;
-                border-radius: 1rem;
+                border-radius: $br-standard;
                 margin-bottom: 1rem;
 
                 @include screenTablet {
